--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -166,19 +166,20 @@ As the amount of recorded data is huge, an efficient strategy for filtering on s
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.9\linewidth]{images/xrf.png}
+	\includegraphics[width=0.7\linewidth]{images/xrf.png}
 	\caption[Exemplary relative intensity of the 6 keV and 8 keV photon peak on the detector for different scanning positions on the sample]{Exemplary relative intensity of the 6 keV and 8 keV photon peak on the detector for different scanning positions on the sample. In this iron sample, a localized impurity, most likely copper, is clearly visible and can be masked out .}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\begin{subfigure}{0.45\textwidth}
-		\includegraphics[width=\linewidth]{images/mask.png}
+	\begin{subfigure}{0.2\textwidth}
+		\includegraphics[width=\linewidth]{images/mask_dual.png}
 	\end{subfigure}
-	\begin{subfigure}{0.45\textwidth}
-		\includegraphics[width=\linewidth]{images/mask.png}
+	\hspace{1cm}
+	\begin{subfigure}{0.2\textwidth}
+		\includegraphics[width=\linewidth]{images/mask_octal.png}
 	\end{subfigure}
-	\caption[Usable detector area]{Usable detector area (yellow) of the dual (a) and octal (b) detector after signal correction and statistical filtering. Only the intersection of good areas for each run will be used. This way the same mask and number of correlation pairs will be used for samples that will be compared to each other.}	
+	\caption[Usable detector area]{Usable detector area (gray) of the dual (left) and octal (right) detector after signal correction and statistical filtering. Only the intersection of good areas for each run will be used. This way the same mask and number of correlation pairs will be used for samples that will be compared to each other.}	
 \end{figure}
 
 \paragraph{Shot filtering}
