--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -13,3 +13,61 @@
 		\bottomrule
 	\end{tabular}
 \end{table}
+\section{Experiment}
+
+\begin{table}
+	\caption{Miller Indices considered in Kossel line least squares regression of GaAs sample 1 (left) and sample 2 (right). Not all possible Kossel lines are visible in the recorded images.}
+	\begin{tabular}[t]{lll}
+		\toprule
+		h&           k &        l \\
+		\midrule
+	 1 & -1 &  1 \\
+	-1 &  1 &  1 \\
+	-1 & -1 &  1 \\
+	2 & -2 &  0 \\
+	-2 &  2 &  0 \\
+	-2 & -2 &  0 \\
+	2 &  2 &  0 \\
+	-3 & -1 &  1 \\
+	3 &  1 &  1 \\
+	-1 & -3 &  1 \\
+	2 & -2 &  4 \\
+	-2 & -2 &  4 \\
+	2 &  2 &  4 \\
+	-2 &  2 &  4 \\
+	-4 &  0 &  4 \\
+	0 &  4 &  4 \\
+	4 &  0 &  4 \\
+	0 & -4 &  4 \\
+				\bottomrule
+	\end{tabular}
+\hspace{1cm}
+	\begin{tabular}[t]{lll}	
+	\toprule
+	h&           k &        l \\
+	\midrule
+ 2 &  2 &  0 \\
+-2 &  2 &  0 \\
+2 & -2 &  0 \\
+0 & -2 &  2 \\
+0 &  2 &  2 \\
+2 &  0 &  2 \\
+-2 & -2 &  0 \\
+-2 &  0 &  2 \\
+-3 & -1 &  3 \\
+-1 & -3 &  3 \\
+1 &  3 &  3 \\
+3 &  1 &  3 \\
+-1 &  3 &  3 \\
+1 & -3 &  3 \\
+0 & -4 &  4 \\
+-4 &  0 &  4 \\
+0 &  4 &  4 \\
+4 &  0 &  4 \\
+0 &  2 &  6 \\
+2 &  0 &  6 \\
+-2 &  0 &  6 \\
+0 & -2 &  6 \\
+	\bottomrule
+\end{tabular}
+\end{table}
