--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -203,13 +203,53 @@ As discussed in \fref{chap:simulation}, the number of fluorescence photons can b
 
 
 \paragraph{Crystal orientation}
-For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{chap:kossel} can be used.  A semi-automatic alignment program was developed (\fref{fig:kosselfit}) and used the find the crystal orientation (\fref{tab:kosselfit}). As initial parameters, 5.65\,\AA\, lattice constant, 9.25\,keV energy and 800\,px detector distance and the result of a simple 2D cubic fit for the values of the translational shift were used. 
+For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{chap:kossel} can be used.  A semi-automatic alignment program was developed (\fref{fig:kosselfit}) to aid with the procedure: 
+
+For each sample, the images are split into sets of 5000 shots and (after filtering for hot pixels and cutting bellow a noise threshold of 2\,keV), the mean is taken. To better distinguish the Kossel lines from uniform fluorescence, a Gaussian blurred version ($\sigma$=20\, px) is subtracted. Kossel lines are identified visually and the local maxima in the 20x20\,px surrounding block of a selected Kossel line are considered as points on the Kossel line. A least-square regression is performed to minimize the sum of the distances of identified points from Kossel lines by varying the rotation angles and detector translation. 
+As initial parameters, a 5.65\,\AA\, lattice constant, 9.25\,keV energy and 2800\,px detector distance and the result of a 2D cubic fit to the fluorescence background for the values of the translational shift are used. 
+
+The results are shown in \fref{tab:kosselfit} as mean over the sets for each sample and maximum deviation from the mean as an error estimation.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
 	\caption{Program for fitting Kossel lines to experimental data}
 	\label{fig:kosselfit}
 \end{figure}
+
+\begin{figure}
+	\centering
+	\begin{subfigure}{0.7\textwidth}
+		\includegraphics[width=\linewidth]{images/kossel_gaas.png}
+		\caption{Mean images after background subtraction for sample 1 (left) and sample 2 (right)}
+	\end{subfigure}
+\\
+
+	\begin{subfigure}{0.35\textwidth}
+		\includegraphics[width=\linewidth]{images/kossel_gaas1.pdf}
+		\caption{Indexed lines on sample 1}
+	\end{subfigure}
+\hspace{0.2cm}
+	\begin{subfigure}{0.35\textwidth}
+		\includegraphics[width=\linewidth]{images/kossel_gaas2.pdf}
+		\caption{Indexed lines on sample 2}
+	\end{subfigure}
+	\caption[Kossel lines on GaAs samples]{Kossel lines on GaAs samples after background subtraction (a) and the indexed lines overlaid in the determined orientation (b and c).}
+\end{figure}
+
+\begin{table}[]
+	\caption{Results of the Kossel line analysis}
+\begin{tabular}{llllllll}
+	\hline
+	Sample & \multicolumn{2}{l}{Translation} & \multicolumn{3}{l}{Rotation}  & Detector Distance &  \\
+	& x in mm        & y in mm        & yaw              & pitch           & roll           & in mm             &  \\ 
+	\hline
+	GaAs 1 & 1.4$\pm$0.2    & 6.4$\pm$0.4    & -0.4°$\pm$0.2° & 0.1°$\pm$0.2° & 1.5°$\pm$0.2° & 141.7$\pm$0.8     &  \\
+	GaAs 2 & 1.3$\pm$0.2    & 5.8$\pm$0.3    & -0.2°$\pm$0.3° & 0.1°$\pm$0.2° & 46.1°$\pm$0.1° & 139.9$\pm$0.8     &  \\
+	\hline
+\end{tabular}
+	
+	\label{tab:kosselfit}
+\end{table}
 
 \subsection{Reconstruction}
 
@@ -226,17 +266,4 @@ For determining the relative orientation of the crystal with regards to the dete
 
 
 
-\begin{table}[]
-	\caption{Results of the Kossel line analysis}
-	\begin{tabular}{lllll}
-		\hline
-		Sample & Initial Translation & Initial Rotation    & Energy & Rotation           \\
-		& x,y in pixels      & Euler angles x,y,z & in keV    & Euler angles x,y,z \\
-		\hline
-		GaAs 1 &                    &                    &        &                    \\
-		GaAs 2 &                    &                    &        &                   \\
-		\hline
-	\end{tabular}
 
-\label{tab:kosselfit}
-\end{table}
