--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -15,8 +15,16 @@
 \end{table}
 \section{Experiment}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/kossel_gaas.png}
+	\caption{Mean images of 5000 shots after background subtraction for sample 1 (left) and sample 2 (right)}
+	\label{fig:kosselgaasmean}
+\end{figure}
+
+
 \begin{table}
-	\caption{Miller Indices considered in Kossel line least squares regression of GaAs sample 1 (left) and sample 2 (right). Not all possible Kossel lines are visible in the recorded images.}
+	\caption[Miller Indices considered in Kossel line least squares regression of GaAs sample]{Miller Indices considered in Kossel line least squares regression of GaAs sample 1 (left) and sample 2 (right). Not all possible Kossel lines are visible in the recorded images.}
 	\begin{tabular}[t]{lll}
 		\toprule
 		h&           k &        l \\
