--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -234,7 +234,7 @@ As the number of particles inside the focus is increased, in the low $q$ region 
 \end{figure}
 
 \section{Time Dependent Simulations}
-
+\label{sec:timedependend}
 Each of the $N$ atoms is assigned an emitting time $t_{n}$ chosen according to the excitation pulse shape and its position. Starting from this emitting time, the atom emits an exponential decaying field with a decay time chosen to match the lifetime. 
 
 
