--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -132,6 +132,7 @@
 \DeclareMathOperator{\erfc}{erfc}
 \DeclareMathOperator{\erfcx}{erfcx}
 \DeclareMathOperator{\Var}{Var}
+\DeclareMathOperator{\sinc}{sinc}
 %%pygments%
 \usepackage{fancyvrb}
 \usepackage{xcolor}
